tests/unit/snapshots/unit__security_endpoint_snapshots_tests__auth_compat_login_flows_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "flows": [
    {
      "type": "m.login.password"
    },
    {
      "type": "m.login.token"
    }
  ]
}
