tests/unit/snapshots/unit__security_endpoint_snapshots_tests__auth_compat_login_flows_with_sso_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "flows": [
    {
      "type": "m.login.password"
    },
    {
      "type": "m.login.token"
    },
    {
      "identity_providers": "[redacted_sso_providers]",
      "type": "m.login.sso"
    }
  ]
}
