tests/unit/snapshots/unit__security_endpoint_snapshots_tests__auth_compat_login_invalid_credentials_error.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_FORBIDDEN",
  "error": "Invalid credentials"
}
