tests/unit/snapshots/unit__security_endpoint_snapshots_tests__auth_compat_register_uia_challenge_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "flows": [
    {
      "stages": [
        "m.login.dummy"
      ]
    },
    {
      "stages": [
        "m.login.password"
      ]
    }
  ],
  "params": {},
  "session": "[redacted_session_uuid]"
}
