tests/unit/snapshots/unit__security_endpoint_snapshots_tests__auth_compat_whoami_missing_token_error.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_MISSING_TOKEN",
  "error": "Missing access token"
}
