tests/unit/snapshots/unit__security_endpoint_snapshots_tests__auth_compat_whoami_success_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "device_id": "[redacted_device_id]",
  "is_guest": false,
  "user_id": "[redacted_user_id]"
}
