tests/unit/snapshots/unit__security_endpoint_snapshots_tests__burn_after_read_not_enabled_error.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_BAD_JSON",
  "error": "Burn not enabled for this room"
}
