tests/unit/snapshots/unit__security_endpoint_snapshots_tests__burn_after_read_room_not_found_error.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_NOT_FOUND",
  "error": "Room '!room:server' not found"
}
