tests/unit/snapshots/unit__security_endpoint_snapshots_tests__burn_after_read_stats_zero_defaults_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "rooms_with_burn_enabled": 0,
  "total_burned": 0,
  "total_pending": 0
}
