tests/unit/snapshots/unit__security_endpoint_snapshots_tests__key_rotation_admin_forbidden_error.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_FORBIDDEN",
  "error": "Key rotation management requires server admin privileges"
}
